--- a/app/assets/stylesheets/components/devise/_devise_edit.scss
+++ b/app/assets/stylesheets/components/devise/_devise_edit.scss
@@ -1,23 +1,17 @@
-
-
-
-.styles-container{
-
-
-  .styles-header{
-    padding: auto;
-  }
-
-  .styles-grid{
-
-
-    .styles-sidebar{
+.styles-container {
+  margin: 12px auto;
+  max-width: 1440px;
+  padding: 20px;
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    .styles-sidebar {
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       gap: 20px;
-      align-self: stretch;
-
+    
       button {
         display: flex;
         padding: 8px 16px;
@@ -33,8 +27,39 @@
         line-height: normal;
         background-color: transparent;
         border: none;
-        box-sizing: none;
+        box-sizing: border-box;
+        transition: background-color 0.3s, color 0.3s;
+
+
+        &:hover {
+          background-color: rgba(255, 255, 255, 0.15);
+        }
+
+        .active {
+            background-color: white;
+            color: #225191;
+        }
+
       }
     }
   }
 }
+
+.styles-section {
+  margin-top: 24px;
+  color: white;
+}
+
+
+.descripcion-edit{
+  margin-bottom: 48px;
+  color: #FFF;
+  font-family: Roboto;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+
+
