--- a/app/views/users/teachers.html.erb
+++ b/app/views/users/teachers.html.erb
@@ -55,10 +55,10 @@
       <div class="custom-col-6 custom-col-lg-4 card-chica-grande">
         <%# <p>Contenido para col-6 y col-lg-4</p> %>
         <div class="card card-chica" style="width: 17rem;">
-          <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1703036179/f76d7df8054762f3ad5033a847a343e8_hyoyww.jpg", class: "card-img-top", class:"imag-pequeña", alt: "..." %>
+          <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1703036179/f76d7df8054762f3ad5033a847a343e8_hyoyww.jpg", class: "card-img-top", class:"imag-pequeña-uno", alt: "..." %>
           <div class="card-body botones-pequeños">
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
+            <%= link_to "Reserva", "#", class: "btn btn-light" %>
+            <%= link_to "Mensaje", "#", class: "btn btn-light" %>
           </div>
         </div>
       </div>
@@ -79,11 +79,11 @@
             <div class="col-md-8">
               <div class="card-body body-card">
                 <div class="container-text text-container">
-                  <h2 class="text-start titulo-principal">Eduado R</h2>
-                  <p class="text-start">🎓Enseña Portugués</p>
+                  <h2 class="text-start titulo-principal">Victorino Mora</h2>
+                  <p class="text-start">🎓Enseña ingles</p>
                   <p class="text-start">ℹ️Tener experiencia viviendo en el extranjero.</p>
                   <p class="text-start">ℹ️Certificado TEFL/TESOL</p>
-                  <p class="text-start">ℹ️Experto en inglés conversacional, preparación TOEFL, preparación de inglés FCE.</p>
+                  <p class="text-start">ℹ️Experto en inglés conversacional</p>
                   <p class="text-start">💲5.178 Clases de 60 minutos</p>
                   <p class="text-start">Profesora de ESL certificada por TESOL con 2 años y medio de experiencia en la enseñanza. ¿Quieres convertirte en un comunicador en inglés seguro y eficaz? Entonces estás en el lugar correcto...</p>
                 </div>
@@ -107,8 +107,8 @@
         <div class="card card-chica" style="width: 17rem;">
           <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1704755523/Rectangle_3_bukoox.png", class: "card-img-top", class:"imag-pequeña", alt: "..." %>
           <div class="card-body botones-pequeños">
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
+            <%= link_to "Reservar", "#", class: "btn btn-light" %>
+            <%= link_to "Mensaje", "#", class: "btn btn-light" %>
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
             <div class="col-md-8">
               <div class="card-body body-card">
                 <div class="container-text text-container">
-                  <h2 class="text-start titulo-principal">Eduado R</h2>
+                  <h2 class="text-start titulo-principal">Clemente Escudero</h2>
                   <p class="text-start">🎓Enseña Portugués</p>
                   <p class="text-start">ℹ️Tener experiencia viviendo en el extranjero.</p>
                   <p class="text-start">ℹ️Certificado TEFL/TESOL</p>
@@ -157,8 +157,8 @@
         <div class="card card-chica" style="width: 17rem;">
           <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1704755524/Rectangle_3_1_vxckxc.png", class: "card-img-top", class:"imag-pequeña", alt: "..." %>
           <div class="card-body botones-pequeños">
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
+            <%= link_to "Reservar", "#", class: "btn btn-light" %>
+            <%= link_to "Mensaje", "#", class: "btn btn-light" %>
           </div>
         </div>
       </div>
@@ -179,7 +179,7 @@
             <div class="col-md-8">
               <div class="card-body body-card">
                 <div class="container-text text-container">
-                  <h2 class="text-start titulo-principal">Eduado R</h2>
+                  <h2 class="text-start titulo-principal">Anabel Borrego</h2>
                   <p class="text-start">🎓Enseña Portugués</p>
                   <p class="text-start">ℹ️Tener experiencia viviendo en el extranjero.</p>
                   <p class="text-start">ℹ️Certificado TEFL/TESOL</p>
@@ -207,8 +207,8 @@
         <div class="card card-chica" style="width: 17rem;">
           <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1704755523/Rectangle_3_2_urmdzm.png", class: "card-img-top", class:"imag-pequeña", alt: "..." %>
           <div class="card-body botones-pequeños">
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
+            <%= link_to "Reservar", "#", class: "btn btn-light" %>
+            <%= link_to "Mensaje", "#", class: "btn btn-light" %>
           </div>
         </div>
       </div>
@@ -229,7 +229,7 @@
             <div class="col-md-8">
               <div class="card-body body-card">
                 <div class="container-text text-container">
-                  <h2 class="text-start titulo-principal">Eduado R</h2>
+                  <h2 class="text-start titulo-principal">Teresa Jesus Molina</h2>
                   <p class="text-start">🎓Enseña Portugués</p>
                   <p class="text-start">ℹ️Tener experiencia viviendo en el extranjero.</p>
                   <p class="text-start">ℹ️Certificado TEFL/TESOL</p>
@@ -257,8 +257,8 @@
         <div class="card card-chica" style="width: 17rem;">
           <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1704755523/Rectangle_3_3_pend0b.png", class: "card-img-top", class:"imag-pequeña", alt: "..." %>
           <div class="card-body botones-pequeños">
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
+            <%= link_to "Reservar", "#", class: "btn btn-light" %>
+            <%= link_to "Mensaje", "#", class: "btn btn-light" %>
           </div>
         </div>
       </div>
@@ -279,7 +279,7 @@
             <div class="col-md-8">
               <div class="card-body body-card">
                 <div class="container-text text-container">
-                  <h2 class="text-start titulo-principal">Eduado R</h2>
+                  <h2 class="text-start titulo-principal">Malika Sánchez</h2>
                   <p class="text-start">🎓Enseña Portugués</p>
                   <p class="text-start">ℹ️Tener experiencia viviendo en el extranjero.</p>
                   <p class="text-start">ℹ️Certificado TEFL/TESOL</p>
@@ -307,8 +307,8 @@
         <div class="card card-chica" style="width: 17rem;">
           <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1704755523/Rectangle_3_4_rxz1f2.png", class: "card-img-top", class:"imag-pequeña", alt: "..." %>
           <div class="card-body botones-pequeños">
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
+            <%= link_to "Reservar", "#", class: "btn btn-light" %>
+            <%= link_to "Mensaje", "#", class: "btn btn-light" %>
           </div>
         </div>
       </div>
@@ -329,7 +329,7 @@
             <div class="col-md-8">
               <div class="card-body body-card">
                 <div class="container-text text-container">
-                  <h2 class="text-start titulo-principal">Eduado R</h2>
+                  <h2 class="text-start titulo-principal">Sheila Trujillo</h2>
                   <p class="text-start">🎓Enseña Portugués</p>
                   <p class="text-start">ℹ️Tener experiencia viviendo en el extranjero.</p>
                   <p class="text-start">ℹ️Certificado TEFL/TESOL</p>
@@ -357,8 +357,8 @@
         <div class="card card-chica" style="width: 17rem;">
           <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1704755523/Rectangle_3_5_u7o6sw.png", class: "card-img-top", class:"imag-pequeña", alt: "..." %>
           <div class="card-body botones-pequeños">
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
+            <%= link_to "Reservar", "#", class: "btn btn-light" %>
+            <%= link_to "Mensaje", "#", class: "btn btn-light" %>
           </div>
         </div>
       </div>
@@ -379,7 +379,7 @@
             <div class="col-md-8">
               <div class="card-body body-card">
                 <div class="container-text text-container">
-                  <h2 class="text-start titulo-principal">Eduado R</h2>
+                  <h2 class="text-start titulo-principal">Jimena Tortosa</h2>
                   <p class="text-start">🎓Enseña Portugués</p>
                   <p class="text-start">ℹ️Tener experiencia viviendo en el extranjero.</p>
                   <p class="text-start">ℹ️Certificado TEFL/TESOL</p>
@@ -406,8 +406,8 @@
         <div class="card card-chica" style="width: 17rem;">
           <%= image_tag "https://res.cloudinary.com/dinso4to6/image/upload/v1704755523/Rectangle_3_6_nw0429.png", class: "card-img-top", class:"imag-pequeña", alt: "..." %>
           <div class="card-body botones-pequeños">
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
-            <%= link_to "Go somewhere", "#", class: "btn btn-light" %>
+            <%= link_to "Reservar", "#", class: "btn btn-light" %>
+            <%= link_to "Mensaje", "#", class: "btn btn-light" %>
           </div>
         </div>
       </div>
