--- a/app/assets/stylesheets/components/_card_teachers.scss
+++ b/app/assets/stylesheets/components/_card_teachers.scss
@@ -60,7 +60,7 @@ border-radius: var(--bs-navbar-toggler-border-radius);
 }
 
 .card-container .col-md-8{
-  width: 50%;
+  width: 59%;
 }
 .imag-grande{
   width: 220px;
@@ -70,11 +70,10 @@ border-radius: var(--bs-navbar-toggler-border-radius);
 .card-ancha {
   border-radius: 10px;
   display: flex;
-  padding: 12px;
+  padding: 0px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: 12px;
   background: #FFF;
 }
 .ancho-uno{
@@ -82,7 +81,7 @@ border-radius: var(--bs-navbar-toggler-border-radius);
 }
 .body-card{
   border-top: 0;
-  width: 137%;
+  width: 112%;
   color: #1C1C1E;
   font-family: Roboto;
   font-size: 14px;
@@ -111,7 +110,7 @@ border-radius: var(--bs-navbar-toggler-border-radius);
   margin: 7px;
   align-items: center;
   background: #FFF;
-  max-width: 83%;
+  max-width: 81%;
   justify-content: space-between;
 }
 .imag-pequeña{
@@ -121,11 +120,21 @@ border-radius: var(--bs-navbar-toggler-border-radius);
   flex: 1 0 0;
   margin: 10px;
 }
-
+.imag-pequeña-uno{
+  max-width: 95%;
+  width: 245px;;
+  border-radius: 10px;
+  flex: 1 0 0;
+  margin: 14px;
+}
 .botones-pequeños{
   justify-content: space-between;
-  padding: 15px;
-  border-radius: 90%;
+  border-radius: 60px;
+  display: flex;
+  padding: 12px 32px;
+  justify-content: center;
+  align-items: center;
+  border: none;
 }
 .botones-pequeños .btn {
   font-size: 16px;
