--- a/app/assets/stylesheets/components/_bookings.scss
+++ b/app/assets/stylesheets/components/_bookings.scss
@@ -27,14 +27,18 @@
 
 .classic-btn {
   color: #205A8C;
-  width: auto;
-  padding: 10px;
-  font-size: 16px;
+  width: 120px;
+  height: 40px;
+  padding: 10px 10px 10px 10px;
+  margin: 10px;
+  font-size: 13px;
   font-weight: 800; // Cambiado a un valor numérico
-  border-width: 5px;
+  border-width: 20px;
   border-radius: 50px;
   background-color: white;
   box-shadow: 0 0 5px #BDC7D9;
   text-decoration: none;
   white-space: nowrap;
+  display: flex;
+  justify-content: center;
 }
