--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -8,7 +8,7 @@
     <button class="nav-link" style="background-color: rgba(34, 81, 145, 1); color: white; border: none;" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Historial</button>
   </li>
   <li class="nav-item button" role="presentation">
-    <button class="nav-link" style="background-color: rgba(34, 81, 145, 1); color: white; border: none;" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Favoritos</button>
+    <button class="nav-link" style="background-color: rgba(34, 81, 145, 1); color: white; border: none;" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false" disabled>Favoritos</button>
   </li>
 </ul>
 
@@ -45,17 +45,19 @@
                   <% end %>
                   <% estimated_time = Time.at((add_time_to_date(booking.date.year, booking.date.month, booking.date.day, booking.time_in.hour, booking.time_in.min) - DateTime.now).to_i) %>
                   <%= "Tiempo estimado #{estimated_time.strftime("%H:%M:%S")}" %>
-                  <%= link_to "Ingresar", booking_path(booking), class: "btn btn-info btn-sm" %>
+
+                  <button type="button" class="btn btn-outline-secondary" disabled>Ingresar</button>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                  <%= link_to "Posponer reserva" , booking_path(booking), class: "classic-btn" %>
+                  <%= link_to "Posponer reserva" , booking_path(booking), class: "classic-btn" %> <br>
+                   <%= link_to "Cancelar reserva", booking_path(booking), class: "classic-btn", data: { turbo_method: :delete, turbo_confirm: "¿Seguro que quieres borrar la reservación?" } %>
                 </div>
               </div>
             </div>
           </li>
         <% end %>
       </ul>
-      <%= link_to "Crear reserva", new_booking_path, class: "btn btn-primary mt-3" %>
+      <%#= link_to "Crear reserva", new_booking_path, class: "btn btn-primary mt-3" %>
     </div>
   </div>
   <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
@@ -63,6 +65,6 @@
   </div>
   <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
     Favoritas
-    
+
   </div>
 </div>
