--- a/app/views/users/_card_perfil.html.erb
+++ b/app/views/users/_card_perfil.html.erb
@@ -1,3 +1,10 @@
+
+<% if @user.teacher? %>
+  <%= link_to new_booking_path, class: "booking-button" do %>
+  Realizar una reserva
+  <% end %>
+<% end %>
+
 <div class="row">
 
   <div class="col-md-4">
