--- a/app/assets/stylesheets/components/_card_teacher.scss
+++ b/app/assets/stylesheets/components/_card_teacher.scss
@@ -49,14 +49,14 @@ border-radius: var(--bs-navbar-toggler-border-radius);
 }
 
 /*cards  */
-.card-container {
+.card-containers {
   display: flex;
   justify-content: space-around;
   padding: 4px;
   margin-right: 130px;
   margin-left: 130px;
   margin-top: 10px;
-   margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .card-container .col-md-8{
@@ -88,7 +88,7 @@ border-radius: var(--bs-navbar-toggler-border-radius);
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-   padding-right: 10px;
+  padding-right: 10px;
 
 }
 .text-container{
