--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,3 @@
-// Import your components CSS files here.
 @import "alert";
 @import "avatar";
 @import "form_legend_clear";
@@ -17,6 +16,5 @@
 @import "blog/card_blogs";
 @import "blog/show_blog";
 @import "devise/devise_edit";
-@import "booking-button"
-@import "card_teachers";
-
+@import "booking-button";
+@import "card_teacher";
