--- a/app/views/users/teachers.html.erb
+++ b/app/views/users/teachers.html.erb
@@ -17,7 +17,7 @@
 
 <!-- primera cards profesores -->
 <div class="container-cards">
-  <div class="custom-container card-container">
+  <div class="custom-container card-containers">
     <div class="custom-row d-flex">
       <div class="custom-col-sm-6 custom-col-lg-8">
         <%# <p>Contenido para col-sm-6 y col-lg-8</p> %>
@@ -31,7 +31,6 @@
                 <div class="container-text text-container">
                   <h2 class="text-start titulo-principal">Eduado R</h2>
                   <p class="text-start">🎓Enseña Portugués</p>
-                  <p class="text-start">ℹ️Tener experiencia viviendo en el extranjero.</p>
                   <p class="text-start">ℹ️Certificado TEFL/TESOL</p>
                   <p class="text-start">ℹ️Experto en inglés conversacional, preparación TOEFL, preparación de inglés FCE.</p>
                   <p class="text-start">💲5.178 Clases de 60 minutos</p>
@@ -67,7 +66,7 @@
 </div>
 <!--  segunda cards profesores -->
 <div class="container-cards">
-  <div class="custom-container card-container">
+  <div class="custom-container card-containers">
     <div class="custom-row d-flex">
       <div class="custom-col-sm-6 custom-col-lg-8">
         <%# <p>Contenido para col-sm-6 y col-lg-8</p> %>
@@ -117,7 +116,7 @@
 </div>
 <!-- tercera cards profesores -->
 <div class="container-cards">
-  <div class="custom-container card-container">
+  <div class="custom-container card-containers">
     <div class="custom-row d-flex">
       <div class="custom-col-sm-6 custom-col-lg-8">
         <%# <p>Contenido para col-sm-6 y col-lg-8</p> %>
@@ -167,7 +166,7 @@
 </div>
 <!-- cuarta cards profesores -->
 <div class="container-cards">
-  <div class="custom-container card-container">
+  <div class="custom-container card-containers">
     <div class="custom-row d-flex">
       <div class="custom-col-sm-6 custom-col-lg-8">
         <%# <p>Contenido para col-sm-6 y col-lg-8</p> %>
@@ -217,7 +216,7 @@
 </div>
 <!-- quinta cards profesores -->
 <div class="container-cards">
-  <div class="custom-container card-container">
+  <div class="custom-container card-containers">
     <div class="custom-row d-flex">
       <div class="custom-col-sm-6 custom-col-lg-8">
         <%# <p>Contenido para col-sm-6 y col-lg-8</p> %>
@@ -267,7 +266,7 @@
 </div>
 <!--  sexta cards profesores -->
 <div class="container-cards">
-  <div class="custom-container card-container">
+  <div class="custom-container card-containers">
     <div class="custom-row d-flex">
       <div class="custom-col-sm-6 custom-col-lg-8">
         <%# <p>Contenido para col-sm-6 y col-lg-8</p> %>
@@ -317,7 +316,7 @@
 </div>
 <!-- cards profesores -->
 <div class="container-cards">
-  <div class="custom-container card-container">
+  <div class="custom-container card-containers">
     <div class="custom-row d-flex">
       <div class="custom-col-sm-6 custom-col-lg-8">
         <%# <p>Contenido para col-sm-6 y col-lg-8</p> %>
@@ -367,7 +366,7 @@
 </div>
 <!--  8va cards profesores -->
 <div class="container-cards">
-  <div class="custom-container card-container">
+  <div class="custom-container card-containers">
     <div class="custom-row d-flex">
       <div class="custom-col-sm-6 custom-col-lg-8">
         <%# <p>Contenido para col-sm-6 y col-lg-8</p> %>
