--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -17,6 +17,4 @@
 @import "blog/card_blogs";
 @import "blog/show_blog";
 @import "devise/devise_edit";
-@import "booking-button"
-@import "card_teachers";
-
+@import "booking-button";
