--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
   <div class="container" style="max-width: 1440px;">
 
     <%= render "banner_perfil" %>
+    <%= render "card_data_perfil" %>
     <%= render "card_perfil" %>
 
 
